[package]
name = "slack-emoji"
version = "0.1.0"
authors = ["M3t0r <github@m3t0r.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "multipart", "json"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3"
indicatif = "0.16"

